<resources>
    <string name="app_name">PluzzleGame</string>
    <string name="action_settings">Settings</string>
    <string name="noGameMsg">No game saved.\nCreate your own game and enjoy!</string>
    <string name="new_game_setting">New Game Settings</string>
    <string name="select_grid_size">Select grid size (row X column):</string>
    <string name="select_img">Select image:</string>
    <string name="grid_4x4">4x4</string>
    <string name="grid_5x5">5x5</string>
    <string name="grid_6x6">6x6</string>
    <string name="grid_random">Random</string>
    <string name="grid_select_size">Let me choose: </string>
    <string name="column">Column </string>
    <string name="row">Row</string>

    <!-- uCrop -->
    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>

    <string name="description_cropped_image">Cropped image</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>

    <string name="file_provider_authorities">com.yalantis.ucrop.provider</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="pick_random">Pick random</string>
    <string name="selected_image">Selected Image</string>
    <string name="loading">loading</string>
</resources>
