<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manhdaovan.pluzzlegame.NewGameSettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_game_setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/actionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="@string/select_img"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/imgView_choose_img"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="60"
                    android:background="@android:color/white"
                    android:onClick="selectImage"
                    android:src="@drawable/select_image" />

                <RadioGroup
                    android:id="@+id/radio_grid_size"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="25">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_grid_size"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:id="@+id/setting_grid_size_3x3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid_4x4" />

                    <RadioButton
                        android:id="@+id/setting_grid_size_4x4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid_5x5" />

                    <RadioButton
                        android:id="@+id/setting_grid_size_5x5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grid_6x6" />
                </RadioGroup>

            </LinearLayout> -->

            <LinearLayout
                android:id="@+id/wrapper_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_rounded_rectangle"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_crop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_pick_amp_crop"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_random_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_crop_random_image"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <RadioGroup
                    android:id="@+id/radio_group_aspect_ratio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/label_aspect_ratio"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <CheckBox
                        android:id="@+id/checkbox_freestyle_crop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_freestyle_crop"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/radio_dynamic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_dynamic"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:checked="true" />

                    <RadioButton
                        android:id="@+id/radio_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_image_source"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/radio_square"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_square"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_text_ratio_x"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="x"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="to"
                            tools:ignore="HardcodedText" />

                        <EditText
                            android:id="@+id/edit_text_ratio_y"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="y"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_max_cropped_image_size"
                    android:textAppearance="?android:textAppearanceSmall" />

                <CheckBox
                    android:id="@+id/checkbox_max_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_resize_image_to_max_size"
                    android:textAppearance="?android:textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_text_max_width"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/label_width"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="x"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/edit_text_max_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/label_height"
                        android:inputType="number" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <RadioGroup
                    android:id="@+id/radio_group_compression_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/label_compression_settings"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/radio_jpeg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="JPEG"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:checked="true"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:id="@+id/radio_png"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="PNG"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/text_view_quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="?android:textAppearanceSmall"
                        tools:text="Quality: 90" />

                    <SeekBar
                        android:id="@+id/seekbar_quality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:progress="90" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_ui"
                    android:textAppearance="?android:textAppearanceSmall" />

                <CheckBox
                    android:id="@+id/checkbox_hide_bottom_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_hide_bottom_ui_controls"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

        </FrameLayout>


    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

    <!--
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        tools:context="com.manhdaovan.pluzzlegame.NewGameSettingActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/select_img"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/imgView_choose_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:layout_weight="60"
            android:src="@drawable/select_image"
            android:onClick="selectImage" />

        <RadioGroup
            android:id="@+id/radio_grid_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_grid_size"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/setting_grid_size_3x3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_4x4" />

            <RadioButton
                android:id="@+id/setting_grid_size_4x4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_5x5" />

            <RadioButton
                android:id="@+id/setting_grid_size_5x5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_6x6" />
        </RadioGroup>


        <Button
            android:onClick="goToCropImg"
            android:text="OK"
            android:id="@+id/btn_setting_ok"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/ConfirmBtn"/>

    </LinearLayout>
    -->